# 10xDevBookCard

./: .dockerignore  .env.example  .gitignore  Dockerfile  FLY-POWERSHELL-SETUP.txt  FORCE-REDEPLOY.txt  LICENSE  README.md  alembic.ini  deploy-commands.md  fly.toml  package.json  playwright.config.ts  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json
.ai/: AFTER-EACH-CHANGE.md  DEPLOYMENT.md  E2E-TESTS.md  ENV-CONFIG.md  GOVERNANCE.md  README.md  RELEASE.md  TEST-STRATEGY.md  ai-implementation.md  auth-ui-mvp-to-production.md  cicd-security-plan.md  governance.md  new-user-experience.md  prd.md  tech-stack.md  test-plan.md  ui-fixes.md  user-profile-view.md
.ai/.dev/: commands.txt
.ai/01-product/: prd.md  tech-stack.md
.ai/02-architecture/: ai-implementation.md
.ai/03-governance/: after-each-change.md
.ai/04-testing/: e2e-tests.md  test-plan.md
.ai/05-security/: cicd-security-plan.md  security-baseline.md
.ai/06-deployment/: deployment.md  dev-commands.md
.ai/07-ui/: ui-fixes.md
.ai/decisions/: 0003-ci-governance-required.md
.ai/diagrams/: README.md  auth.md  database.md  example.md  ui.md
.dev/road-map/: 00-timeline.md  01-architecture.md  03-routing-ssr.md  04-openrouter-ai.md  05-tests.md  99-current-status-next.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  (+3 more)
alembic/: env.py
app/: main.py
static/: styles.css
templates/: base.html  base_public.html  home.html
tests/: conftest.py  test_api_auth.py  test_api_books_notes.py  test_api_health.py  test_openrouter_service.py  test_ssr_auth_books.py
(+63 files in other folders)
